--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -12,8 +12,8 @@
 
           .col-md-3 img{
 
-          width:255px;
-          height:2  55px;
+          width:170px;
+          height:200px;
           }
 
           body .carousel-indicator li{
@@ -28,10 +28,12 @@
           body .carousel-control-next-icon{
           background-color: blue;
           }
+
           .carousel-control-prev,
           .carousel-control-next{
           top: auto;
           bottom: auto;
+          padding-top: 222px;
           }
            body .no-padding{
            padding-left: 0,
@@ -44,6 +46,7 @@
 <div class="container">
     {% for products,range,nslides in allprods %} 
     <h5 class="my-4">Flash Sale On {{products.0.category}} - Recommended Items</h5>
+    <div class="row">
 <div id="demo{{forloop.counter}}" class="carousel slide my-3" data-ride="carousel">
     <ul class="carousel-indicators">
       <li data-target="#demo{{forloop.counter}}" data-slide-to="0" class="active"></li>
@@ -56,25 +59,16 @@
     <div class="container carousel-inner no-padding">
 
       <div class="carousel-item active">
-        <div class="col-xs-3 col-sm-3 col-md-3">
-          <div class="card" style="width: 18rem;">
-            <img src='/media/{{products.0.image}}' class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">{{products.0.product_name}}</h5>
-                <p class="card-text">{{products.o.decs}}</p>
-                <a href="#" class="btn btn-primary">Add to Cart</a>
-            </div>
-          </div>
-       </div>
 
-        {% for i in products|slice:"1:" %}
+
+        {% for i in products%}
         <div class="col-xs-3 col-sm-3 col-md-3">
           <div class="card" style="width: 18rem;">
             <img src='/media/{{i.image}}' class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">{{i.product_name}}</h5>
-              <p class="card-text"> {{i.desc}}</p>
-              <a href="#" class="btn btn-primary">Add to Cart</a>
+              <p class="card-text">{{i.desc|slice:"0:53"}}...</p>
+              <button id="pr{{i.id}}" class="btn btn-primary cart">Add To Cart</button>
+              <a href="/shop/products/{{i.id}}"><button id="qv{{i.id}}" class="btn btn-primary cart">QuickView</button></a>
             </div>
           </div>
         </div>
@@ -85,7 +79,9 @@
 
         {% endfor %}       
       </div>
+    </div>
     
+</div>
 </div>
 
 
@@ -103,29 +99,32 @@
 
  {% block js %}
  <script>
- console.log('working');
- if(localStorage.getItem('cart') == null){
- var cart = {};
- }
- else
- {
- cart = JSON.parse(localStorage.getItem('cart'));
- document.getElementById('cart').innerHTML = Object.keys(cart).length;
- }
- $('.cart').click(function(){
- console.log('clicked');
- var idstr = this.id.toString();
- console.log(idstr);
- if (cart[idstr] !=undefined){
- cart[idstr] = cart[idstr] + 1;
- }
- else
- {
- cart[idstr] = 1;
- }
- console.log(cart);
- localStorage.setItem('cart', JSON.stringify(cart));
- document.getElementById('cart').innerHTML = Object.keys(cart).length;
- });
- </script>
+  console.log('working');
+  if(localStorage.getItem('cart') == null){
+  var cart = {};
+  }
+  else
+  {
+  cart = JSON.parse(localStorage.getItem('cart'));
+  document.getElementById('cart').innerHTML = Object.keys(cart).length;
+  }
+  $('.cart').click(function(){
+  console.log('clicked');
+  var idstr = this.id.toString();
+  console.log(idstr);
+  if (cart[idstr] !=undefined){
+  cart[idstr] = cart[idstr] + 1;
+  }
+  else
+  {
+  cart[idstr] = 1;
+  }
+  console.log(cart);
+  localStorage.setItem('cart', JSON.stringify(cart));
+  document.getElementById('cart').innerHTML = Object.keys(cart).length;
+  });
+  $('#popcart').popover();
+  document.getElementById("popcart").setAttribute('data-content', '<h5>Cart for your items in my shopping cart</h5>');
+  </script>
+
  {% endblock %}
